--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@ node_modules
 #exclude dist folder (only for local deploy)
 dist
 # exclude packaje-lock.json (only usefull on project-uncomment on project-)
-package-lock.json
+# package-lock.json
