--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "project-name",
+	"name": "Article preview component solution",
 	"version": "1.0.0",
-	"description": "This is a basic html nodejs boilerplate",
+	"description": "frontendmentor.io project",
 	"source": "src/index.html",
 	"scripts": {
 		"dev": "parcel",
